// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`heading snapshots Heading: 0 1`] = `
<h1
  className="typography-0-1-8 typography__1-0-1-9 heading-0-1-1 heading__1-0-1-2"
>
  Heading test string
</h1>
`;

exports[`heading snapshots Heading: 1 1`] = `
<h1
  className="typography-0-1-25 typography__1-0-1-26 heading-0-1-18 heading__1-0-1-19"
  data-sketch-symbol="Heading 1"
>
  Heading test string
</h1>
`;

exports[`heading snapshots Heading: 2 1`] = `
<h2
  className="typography-0-1-42 typography__2-0-1-44 heading-0-1-35 heading__2-0-1-37"
  data-sketch-symbol="Heading 2"
>
  Heading test string
</h2>
`;

exports[`heading snapshots Heading: 3 1`] = `
<h3
  className="typography-0-1-59 typography__3-0-1-62 heading-0-1-52 heading__3-0-1-55"
  data-sketch-symbol="Heading 3"
>
  Heading test string
</h3>
`;

exports[`heading snapshots Heading: 4 1`] = `
<h4
  className="typography-0-1-76 typography__4-0-1-80 heading-0-1-69 heading__4-0-1-73"
  data-sketch-symbol="Heading 4"
>
  Heading test string
</h4>
`;

exports[`heading snapshots Heading: 5 1`] = `
<h5
  className="typography-0-1-93 typography__5-0-1-98 heading-0-1-86 heading__5-0-1-91"
  data-sketch-symbol="Heading 5"
>
  Heading test string
</h5>
`;

exports[`heading snapshots Heading: 6 1`] = `
<h6
  className="typography-0-1-110 typography__6-0-1-116 heading-0-1-103 heading__6-0-1-109"
  data-sketch-symbol="Heading 6"
>
  Heading test string
</h6>
`;
